<resources>
    <string name="app_name">ParkingAppv01</string>
    <string name="btn_pri">Prijava</string>
    <string name="btn_reg">Registracija</string>
    <string name="btn_pon">PONUDI PARKING</string>
    <string name="btn_pro">PRONAĐI PARKING</string>
    <string name="btn_ok">OK</string>
    <string name="naslov">PRIVATNI PARKING PULA</string>
    <string name="text1">Nemaš račun? Napravi ga!</string>
    <string name="text2">Klikni na ikonu za više!</string>
    <string name="text3">Imaš svoje parkirno mjesto koje je prazno dok si odsutan od doma?
                         Daj ga iznajmi, nekom učini uslugu i usput zaradi! :)</string>
    <string name="text4">Unesi svoj e-mail i lozinku, završi prijavu i unutra si!</string>
    <string name="text5">Ukoliko još nemaš račun, napravi ga.</string>
    <string name="text6">Kako bi mogao/la iznajmiti ili unajmiti parkirno mjesto moraš se registrirati.</string>
    <string name="text7">Već imaš račun?</string>
    <string name="text8">Imaš prazno parkirno mjesto ili ga trebaš? Ponudi ili pronađi parking.</string>
    <string name="text9">Tvoj parking je uspješno kreiran! Korisnici ga sada mogu rezervirati, a ti zaraditi! Sretno! :)</string>
    <string name="text10">Tvoj parking je uspješno rezerviran! Plati potreban iznos kako bi postao nedostupan za druge korisnike. </string>
    <string name="text11">Tvoj parking je uspješno plaćen!</string>
    <string name="text13" >Unesi podatke o parkingu kako bi ga mogao/la iznajmiti.</string>
    <string name="text14">Ovo je tvoja kreirana ponuda parkinga.</string>
    <string name="text15">Klikni na ponuđeni parking za više informacija.</string>
    <string name="otvori">Otvori</string>
    <string name="zatvori">Zatvori</string>
    <string name="APIKEY">AIzaSyAbrz52zZB-Vh3xjH6Bpbl6_SrXxJVi7Sw</string>
</resources>
